add embedded code block

--- a/embed.html
+++ b/embed.html
@@ -49,6 +49,12 @@
         class="embed"
         src="https://localpen.io/#https://gist.github.com/hatemhosny/a0a32216df59e53879b7cd83856cdde4"
       ></iframe>
+
+      <h3>Code Block</h3>
+      <iframe
+        class="embed"
+        src="https://localpen.io/?mode=codeblock&js=script.jsx#https://gist.github.com/hatemhosny/a0a32216df59e53879b7cd83856cdde4"
+      ></iframe>
     </div>
   </body>
 </html>
