--- a/embed.html
+++ b/embed.html
@@ -41,16 +41,16 @@
     <div id="container">
       <h1>Embedded Localpen Editors</h1>
 
-      <h3>Empty</h3>
+      <h3 id="empty-embed">Empty</h3>
       <iframe class="embed" src="https://localpen.io/"></iframe>
 
-      <h3>Prefilled</h3>
+      <h3 id="prefilled-embed">Prefilled</h3>
       <iframe
         class="embed"
         src="https://localpen.io/#https://gist.github.com/hatemhosny/a0a32216df59e53879b7cd83856cdde4"
       ></iframe>
 
-      <h3>Code Block</h3>
+      <h3 id="codeblock">Code Block</h3>
       <iframe
         class="embed"
         src="https://localpen.io/?mode=codeblock&js=script.jsx#https://gist.github.com/hatemhosny/a0a32216df59e53879b7cd83856cdde4"
