add screenshots for templates, css presets

--- a/embed.html
+++ b/embed.html
@@ -35,11 +35,17 @@
         min-height: 60vh;
         margin: 1em;
       }
+      a {
+        color: steelblue;
+      }
     </style>
   </head>
   <body>
     <div id="container">
-      <h1>Embedded Localpen Editors</h1>
+      <h1>
+        Embedded
+        <a href="https://github.com/hatemhosny/localpen">LocalPen</a> Editors
+      </h1>
 
       <h3 id="empty-embed">Empty</h3>
       <iframe class="embed" src="https://localpen.io/"></iframe>
