rename to livecodes

--- a/embed.html
+++ b/embed.html
@@ -44,22 +44,22 @@
     <div id="container">
       <h1>
         Embedded
-        <a href="https://github.com/hatemhosny/localpen">LocalPen</a> Editors
+        <a href="https://github.com/live-codes/livecodes">LiveCodes</a> Editors
       </h1>
 
       <h3 id="empty-embed">Empty</h3>
-      <iframe class="embed" src="https://localpen.io/"></iframe>
+      <iframe class="embed" src="https://livecodes.io/"></iframe>
 
       <h3 id="prefilled-embed">Prefilled</h3>
       <iframe
         class="embed"
-        src="https://localpen.io/#https://gist.github.com/hatemhosny/a0a32216df59e53879b7cd83856cdde4"
+        src="https://livecodes.io/#https://gist.github.com/hatemhosny/a0a32216df59e53879b7cd83856cdde4"
       ></iframe>
 
       <h3 id="codeblock">Code Block</h3>
       <iframe
         class="embed"
-        src="https://localpen.io/?mode=codeblock&js=script.jsx#https://gist.github.com/hatemhosny/a0a32216df59e53879b7cd83856cdde4"
+        src="https://livecodes.io/?mode=codeblock&js=script.jsx#https://gist.github.com/hatemhosny/a0a32216df59e53879b7cd83856cdde4"
       ></iframe>
     </div>
   </body>
