--- a/api-demo.html
+++ b/api-demo.html
@@ -11,6 +11,7 @@
         flex-direction: column;
         font: 0.9em sans-serif;
         justify-content: center;
+        width: 100vw;
       }
       h1 {
         text-align: center;
@@ -37,6 +38,8 @@
         display: flex;
         gap: 1em;
         justify-content: center;
+        flex-wrap: wrap;
+        max-width: 100%;
         margin: 1em;
         padding: 0;
       }
