minor edit in api demo

--- a/api-demo.html
+++ b/api-demo.html
@@ -102,7 +102,7 @@
       <label for="show-full">full</label>
       <button id="show-btn">show</button>
     </div>
-    <textarea name="text" id="text"></textarea>
+    <textarea name="text" id="text" wrap="off"></textarea>
     <div id="footer">
       <a href="https://livecodes.io">LiveCodes</a>
       <a href="https://livecodes.io/web/docs/advanced/api">API Documentation</a>
