update SDK URL in tutorial-demo.html

--- a/tutorial-demo.html
+++ b/tutorial-demo.html
@@ -86,7 +86,7 @@
       >
     </div>
     <script type="module">
-      import { createPlayground } from "https://dev.livecodes.io/lib/livecodes.esm.js";
+      import { createPlayground } from "https://dev.livecodes.io/sdk/livecodes.js";
       const options = {
         appUrl: "https://dev.livecodes.io/",
       };
