--- a/tutorial-demo.html
+++ b/tutorial-demo.html
@@ -11,7 +11,7 @@
         flex-direction: column;
         font: 0.9em sans-serif;
         justify-content: center;
-        width: 100vw;
+        margin: 10px 10%;
       }
       h1 {
         text-align: center;
@@ -19,19 +19,8 @@
         color: rgb(72, 72, 72);
       }
       #container {
-        border: 1px solid black;
-        border-radius: 5px;
         height: 60vh;
-        min-height: 250px;
-        width: 80%;
         margin: auto;
-      }
-
-      #container iframe {
-        border: 0;
-        border-radius: 5px;
-        height: 100%;
-        width: 100%;
       }
       #controls {
         list-style: none;
@@ -79,9 +68,9 @@
 
     <div id="footer">
       <a href="https://livecodes.io">LiveCodes</a>
-      <a href="https://livecodes.io/web/docs/advanced/api">API Documentation</a>
+      <a href="https://livecodes.io/docs/sdk">SDK Documentation</a>
       <a
-        href="https://github.com/live-codes/livecodes-examples/blob/gh-pages/api-demo.html"
+        href="https://github.com/live-codes/livecodes-examples/blob/gh-pages/tutorial-demo.html"
         >Page Source</a
       >
     </div>
